k3s/dashdot/30-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashdot-svc
  namespace: monitoring
spec:
  selector:
    app: dashdot
  ports:
    - name: http
      port: 80
      targetPort: 3001
