k3s/dashdot/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashdot-ingress
  namespace: monitoring
spec:
  rules:
    - host: dashdot.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashdot-svc
                port:
                  number: 80
    - host: dashdot.enoal.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashdot-svc
                port:
                  number: 80
